# cubesat

./: .gitignore  .gitmodules  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/applications/: command_handler.doctree  events.doctree  power_policies.doctree
.doctrees/services/: battery_management.doctree  logging.doctree  mppt_controller.doctree  power_profiles.doctree  redundancy_manager.doctree  telemetry.doctree  uart_events.doctree
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: design-review-request.yml
.github/workflows/: build_and_docs.yml  build_and_test.sh  hardware.yml
adcs/documentation/: subsystem_info.md
applications/: command_handler.html  events.html  power_policies.html
backplane/documentation/: subsystem_info.md
comms/documentation/: subsystem_info.md
documentation/checklists/: bringup_test.md  firmware_service.md  layout_review.md  schematic_review.md
documentation/design_guidelines/: hitl.md  keeping_the_hal_policy_free.md  preliminary_hardware_design.md  refactoring_polling_services.md  schematic_layout_design.md  writing_atps.md  writing_icds.md
documentation/process/: self_review.md
documentation/templates/: atp.md  icd.md
eps/: #auto_saved_files#  .gitignore  battery_charger.kicad_sch
eps/battery_contact/: battery_contact.kicad_pcb  battery_contact.kicad_prl  battery_contact.kicad_pro  battery_contact.kicad_sch
eps/battery_contact_l/: .gitignore  battery_contact.kicad_pcb  battery_contact.kicad_sch
eps/battery_contact_panel/: battery_contact_panel.kicad_pcb  battery_contact_panel.kicad_prl  battery_contact_panel.kicad_pro
eps/battery_contact_r/: battery_contact.kicad_prl  battery_contact.kicad_pro  battery_contact.kicad_sch
eps/documentation/: EPS Project Kickoff.md  subsystem_info.md  v1r1_bugs.md
eps/firmware/: CMakeLists.txt  README.md  STM32L496ZGTx_FLASH.ld  flash_and_print_logs_sync.py  gdb_print_logs.py  main.c  ocd  startup_stm32l496xx.s  system_stm32l4xx.c
eps/firmware/app/: command_handler.c  command_handler.h  events.h  power_policies.c  power_policies.h
eps/firmware/bootstrap/: .mxproject  Makefile  eps-bootstrap.ioc
eps/firmware/bootstrap/Core/Inc/: stm32l4xx_hal_conf.h  stm32l4xx_it.h
eps/firmware/bootstrap/Core/Src/: adc.c  gpio.c  i2c.c  main.c  stm32l4xx_it.c  tim.c
eps/firmware/bsp/mcu/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
eps/firmware/bsp/mcu/Src/: adc.c  can.c  dma.c  gpio.c  i2c.c  iwdg.c  stm32l4xx_it.c  usart.c
eps/firmware/bsp/system/: clock.c  error.c  error.h
eps/firmware/config/: eps_config.h  eps_power_profiles.h
eps/firmware/hal/: adc.h  gpio.h  hal_adc.c  hal_adc.h  hal_can.c  hal_gpio.c  hal_gpio.h  hal_gpio_types.h  hal_i2c.c  hal_i2c.h  hal_time.c  hal_time.h  hal_uart.c  hal_uart.h  uart.h
eps/firmware/hitl/: test_harness.h
eps/firmware/mocks/: adc_mock.c  adc_mock.h  gpio_mock.c  gpio_mock.h  hal_adc_mock.c  hal_flash_mock.c  hal_gpio_mock.c  hal_i2c_mock.c  hal_i2c_mock.h  hal_time_mock.c  hal_uart_mock.c  uart_mock.c  uart_mock.h
eps/firmware/mocks/bsp/: adc.h  clock_mock.c  gpio.h  hal_stubs.c  i2c.h  iwdg.h  stm32l4xx_hal_i2c.h
eps/firmware/services/: battery_management.c  battery_management.h  can_events.c  logging.c  logging.h  mppt_controller.c  mppt_controller.h  power_profiles.c  power_profiles.h  rail_controller.c  rail_controller.h  redundancy_manager.c  redundancy_manager.h  telemetry.c  telemetry.h  uart_events.c  uart_events.h  watchdog.c  watchdog.h
eps/firmware/tests/: CMakeLists.txt  test_adc_mock.c  test_battery_management.c  test_can_mock.c  test_gpio_mock.c  test_i2c_timeout.c  test_logging.c  test_mppt_controller.c  test_power_policies.c  test_power_profiles.c  test_rail_controller.c  test_redundancy_manager.c  test_telemetry.c  test_uart_mock.c  test_watchdog.c
eps/firmware/tests/mocks/: event_bus_mock.c  event_bus_mock.h  rail_controller_mock.c  rail_controller_mock.h
eps/hardware/: #auto_saved_files#  .gitignore  3v3_voltage_regulator.kicad_sch  5V_voltage_regulator.kicad_sch  adc_rc_filters.kicad_sch  battery_charger.kicad_sch  current_monitor.kicad_sch  current_monitors.kicad_sch  eps.kicad_pcb  eps.kicad_prl  eps.kicad_pro  eps.kicad_sch  fp-info-cache  mppt.kicad_sch  (+8 more)
obc/firmware/: CMakeLists.txt  main.c  ocd
obc/firmware/bootstrap/Core/Src/: stm32h7xx_hal_msp.c  stm32h7xx_it.c
obc/firmware/bootstrap/cmake/: starm-clang.cmake
obc/firmware/bootstrap/cmake/stm32cubemx/: CMakeLists.txt
obc/firmware/bsp/mcu/Inc/: peripherals.h  stm32h7xx_hal_conf.h
obc/firmware/bsp/mcu/Src/: peripherals.c  stm32h7xx_it.c
obc/firmware/bsp/startup/: STM32H743XG_FLASH.ld
obc/firmware/bsp/system/: clock.c  error.h
obc/firmware/config/: obc_config.h
obc/firmware/hal/: hal_adc.c  hal_can.c  hal_can.h  hal_flash.c  hal_flash.h  hal_fram.c  hal_fram.h  hal_gpio.c  hal_i2c.c  hal_time.c  hal_time.h  hal_uart.c  hal_uart.h
obc/firmware/lib/: core
obc/firmware/mocks/: hal_adc_mock.h  hal_can_mock.c  hal_flash_mock.c  hal_gpio_mock.h  hal_i2c_mock.c  hal_time_mock.c  hal_uart_mock.h
obc/firmware/mocks/bsp/: clock.h  hal_stubs.c  i2c.h  peripherals.h  stm32h7xx_hal.h  stm32h7xx_hal_rcc.h
obc/firmware/scripts/: fetch_logs.py
obc/firmware/services/: can_events.c  can_events.h  logging.c  logging.h  sensors.c
obc/v1/tests/lora-packet-transmission/: .gitignore  CMakeLists.txt  shell.nix
obc/v1/tests/lora-packet-transmission/src/: main.c
pr-11/: index.html  objects.inv  search.html  searchindex.js
pr-13/: index.html
pr-14/: searchindex.js
pr-23/: .buildinfo  genindex.html
pr-27/: searchindex.js
pr-3/: .buildinfo  genindex.html  index.html  objects.inv  searchindex.js
pr-33/: objects.inv
pr-34/: index.html  searchindex.js
pr-38/: searchindex.js
pr-4/: objects.inv
pr-5/: genindex.html
pr-8/: searchindex.js
services/: battery_management.html  logging.html  mppt_controller.html  power_profiles.html  rail_controller.html  redundancy_manager.html  telemetry.html  uart_events.html  watchdog.html
(+1978 files in other folders)
